docs(01-09): four contract entries mirrored in Chinese — CmdTarget, 6.2.0 regression, same-release exception, XSeries un-shading (D-05, D-15, D-17, D-25)
- Recorded-instance subsection: @CmdTarget class/method composition is now override-with-fail-on-widening, worked before/after example built from UltiMenu's MenuCommands (deprecated generation) and UltiSideBar's SideBarCommand (current generation)
- Recorded-instance subsection: six-argument connector constructor has failed on every release since 6.2.0, full evidence chain (commit 0286e26, measured NoSuchMethodException, swallow path)
- General two-clause same-release removal exception added to "When a public API becomes eligible for removal", citing the three existing AOP removals as instances it already covers
- Corrected the stale "three bundled libraries" claim (XSeries moved to provided scope + plugin.yml libraries: in 01-06) and recorded the artifact-content consequence for anyone shading this jar
- Every entry mirrored in the Chinese half at the equivalent section